--- a/index.html
+++ b/index.html
@@ -41,18 +41,18 @@
   <small class="one1"> This is small CSS</small>
   <p class="one2"> This is CSS paragraph</p> </div>
 
-  <iframe src="./list.html" title="list" height="200px" width="200px"></iframe>
+  <iframe src="./List.html" title="list" height="200px" width="200px"></iframe>
   <iframe width="360" height="315" src="https://www.youtube.com/embed/GCsaB_sajoo"
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
     allowfullscreen></iframe>
-  <div> <a href="./table.html">Table</a>
+  <div> <a href="./Table.html">Table</a>
     <a href="./List.html">List</a>
     <a href="./New folder/test.html">test</a>
     <a href="../contact.html">Contact Page</a>
     <!-- Relative URL is difficult for me, images page not shows-->
     <!-- <a href="../assets/images.html">images</a> -->
     <a href="#end">End to page</a>
-    <img src="../assets/images/green.jpg" width="200px" height="300px" alt="image not shown" />
+    <img src="../assets/images/green.jpg" width="200px" height="300px" alt="image not shown" >
   </div>
 
   <h1><span>First Heading &lt;</span></h1>
